# stack0.0.5

./: .travis.yml  CMakeLists.txt  README.md
sources/: demo.cpp  stack.h
